--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
     <div class="nav-pill-container">
         <div class="nav-pill">
             <a href="{{ url_for('dashboard') }}" class="active">Dashboard</a>
-            <a href="{{ url_for('view_all_sets') }}">View Flashcards</a>
+            <a href="{{ url_for('view_sets') }}">View Flashcards</a>
             <a href="#">Review Flashcards</a>
             <a href="{{ url_for('logout') }}">Logout</a>
         </div>
