--- a/templates/view_set.html
+++ b/templates/view_set.html
@@ -6,7 +6,7 @@
     <div class="nav-pill-container">
         <div class="nav-pill">
             <a href="{{ url_for('dashboard') }}">Dashboard</a>
-            <a href="{{ url_for('view_all_sets') }}" class="active">View Flashcards</a>
+            <a href="{{ url_for('view_sets') }}" class="active">View Flashcards</a>
             <a href="#">Review Flashcards</a>
             <a href="{{ url_for('logout') }}">Logout</a>
         </div>
@@ -27,7 +27,7 @@
                 </div>
                 
                 <p class="conf-text">High Confidence</p>
-                <a href="{{ url_for('view_set', id=set._id) }}" class="study-now-btn">Study Now</a>
+                <a href="{{ url_for('view_set', set_id=set._id) }}" class="study-now-btn">Study Now</a>
             </div>
             {% endfor %}
         </div>
