--- a/templates/view_set.html
+++ b/templates/view_set.html
@@ -27,7 +27,7 @@
                 </div>
                 
                 <p class="conf-text">High Confidence</p>
-                <a href="{{ url_for('view_set', set_id=set._id) }}" class="study-now-btn">Study Now</a>
+               <a href="{{ url_for('view_set', set_id=set._id) }}" class="btn-study-now">Study Now</a>
             </div>
             {% endfor %}
         </div>
