--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
-
+<script defer src="static/js/dashboard.js"></script>
 <div class="dashboard-container">
     <div class="nav-pill-container">
         <div class="nav-pill">
@@ -41,10 +41,16 @@
         </div>
     </div>
 
-<div class="upload-box"> <h3>Start a New Study Set</h3> 
+<div class="upload-box"> 
+    <h3>Start a New Study Set</h3> 
     <p>Drag and drop your file here, or click to browse.</p> 
-    <input type="file" name="notes_file" id="fileInput" hidden > 
+    
+    <input type="file" name="notes_file" id="fileInput" hidden onchange="handleFileUpload()"> 
     <button type="button" onclick="document.getElementById('fileInput').click()"> Choose file </button> 
-    <span id="fileName"></span> </div>
+    <span id="fileName"></span>
+
+    <div id="loadingStatus" style="display:none; margin-top:10px; color:#5d2a9d;">
+        <b>Processing your notes... please wait.</b>
+    </div>
 </div>
 {% endblock %}
